--- a/Laba_1/styles_1.css
+++ b/Laba_1/styles_1.css
@@ -30,62 +30,102 @@ body {
     display: block;
     margin: 0 auto;
 }
+
 .main-part {
     display: flex;
     flex-direction: row;
     height: 92vh;
 }
 
-.menu {
-    background-color: white;
-    width: 225px;
-    height: 500px;
-    margin-top: 25px;
-    margin-left: 25px;
-    border: 2px solid #8470FF;
-    border-radius: 15px;
-}
+@media screen and (min-width: 800px) {
+    .menu {
+        background-color: white;
+        width: 226px;
+        height: 300px;
+        margin-top: 25px;
+        margin-left: 25px;
+        border: 2px solid #8470FF;
+        border-radius: 15px;
+    }
 
-.menu-box {
-    background-image: url(Premier-League-logo-2016_3.png);
-    background-repeat:no-repeat;
-    background-position: center center;
-    height: 50vh;
-    border-radius: 15px;
-    /*opacity: 0.3;*/
-    /*display: flex;
-    justify-content: space-around;
-    flex-direction: column;*/
-}
+    .menu-box {
+        background-image: url(Premier-League-logo-2016_4.png);
+        background-repeat:no-repeat;
+        background-position: center center;
+        height: 300px;
+        border-radius: 15px;
+    }
 
-.menu-content {
+    .main-menu {
+        /*padding: 40px 25px 40px 25px;*/
+        padding-top: 40px;
+        list-style: none;
+        width: 226px;
+        height: 340;    
+    }
 
-}
+    .main-menu li {
+        text-align: center;
+    }
 
-.big-block {
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    height: 92vh;
-    min-height: 80px;
-    margin-left: 20px;
-}
-.first-block {
-   height: 16vh;
-   min-height: 25px;
-}
+    .main-menu a {
+        display: block;
+        margin-bottom: -1px;
+        padding: 8px 14px;
+        text-decoration: none;
+        color: rgb(255,1,91);
+        font-size: 21px;
+    }
 
-.content {
-    width: 70%;
-    padding: 30px;
-    box-sizing: border-box;
-}
+    .big-block {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        height: 92vh;
+        min-height: 80px;
+        margin-left: 20px;
+    }
 
-.second-block {
-    width: 30%;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
+    .first-block {
+    height: 16vh;
+    min-height: 25px;
+    }
+
+    .content {
+        width: 70%;
+        padding: 30px;
+        box-sizing: border-box;
+    }
+
+    .second-block {
+        width: 30%;
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+    }
+
+    .big-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: stretch;
+        min-width: 100%;
+        min-height: 100%;
+        overflow: auto;
+        position: relative;
+        top: 120px;
+        z-index: 999;
+    }
+
+    .mini-block {
+        display: flex;
+        height: 84vh;
+    }
+
+    .chess td{
+        width: 6vh;
+        height: 6vh;
+    }
 }
 
 footer {
@@ -102,28 +142,7 @@ footer div {
     text-align: center;
     font-size: 12px;
 }
-.big-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
-    min-width: 100%;
-    min-height: 100%;
-    overflow: auto;
-    position: relative;
-    top: 120px;
-    z-index: 999;
-}
 
-.mini-block {
-    display: flex;
-    height: 84vh;
-}
-
-.chess td{
-    width: 6vh;
-    height: 6vh;
-}
 
 th {
     padding: 5px;
@@ -181,3 +200,100 @@ tr:nth-child(odd) td:nth-child(even) {
     border-bottom: 2px solid #00BFFF;
 }
 
+.main-menu a:hover {
+    border-top: 4px solid rgb(255,255,0);
+    border-bottom: 4px solid rgb(255,255,0);
+}
+
+@media screen and (max-width: 800px) {
+    .menu {
+        /*background-color: white;
+        width: 226px;
+        height: 300px;
+        margin-top: 25px;
+        margin-left: 25px;
+        border: 2px solid #8470FF;
+        border-radius: 15px;*/
+
+        background-color: rgba(255, 255, 255, 0.9);
+        overflow-y: auto;
+        position: fixed;
+        left: 0;
+        top: 120px;
+        text-align: center;
+        width: 100%;
+        z-index: 1000;
+    }
+    .main-menu ul {
+        padding: 0;
+        margin: 0;
+    }
+
+    .main-menu {
+        list-style: none;
+    }
+
+    .main-menu li {
+        text-align: center;
+        display: inline-block;
+        font-size: 14px;
+        margin: 16px 20px;
+        text-transform: uppercase;
+    }
+
+    .main-menu a {
+        text-decoration: none; 
+        color: rgb(255,1,91);
+    }
+
+    .big-block {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 92vh;
+        min-height: 80px;
+        margin-left: 20px;
+    }
+
+    .first-block {
+    height: 16vh;
+    min-height: 25px;
+    }
+
+    .content {
+        width: 100%;
+        padding: 30px;
+        box-sizing: border-box;
+    }
+
+    .second-block {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+    }
+
+    .big-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: stretch;
+        min-width: 100%;
+        min-height: 100%;
+        overflow: auto;
+        position: relative;
+        top: 120px;
+        z-index: 999;
+    }
+
+    .mini-block {
+        display: flex;
+        flex-direction: column;
+        height: 84vh;
+    }
+
+    .chess td{
+        width: 5vh;
+        height: 5vh;
+    }
+}
